# pygeoglim

./: .gitignore  ARCHITECTURE.md  CITATION.cff  Dockerfile  HF_README.md  PERMISSION_EVIDENCE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usage.py  global_fetch_demo.ipynb
pygeoglim/: __init__.py  _global_fetch.py  _providers.py  cache.py  cli.py  contracts.py  geometry.py  glhymps.py  glim.py  manifest.py  permissions.py  viz.py
pygeoglim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pygeoglim/providers/: __init__.py  base.py  hf.py  local.py
scripts/: build_global_glhymps.py  build_global_glim.py  post_build.sh  upload_to_hf.py  validate_global_glim.py
tests/: test_api.py  test_layering.py  test_tile_availability.py
