[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# pygeoglim — GLiM lithology + GLHYMPS hydrogeology attributes for watersheds
#
# License gate: GLiM data redistribution requires CCGM permission (gated at
# the HF dataset level). The engineering layer is open; the global data
# assets are published separately once permission is granted.
#
# Current scope: CONUS tiles served from a public HuggingFace repository.
# Global tiles: architecture ready, data assets pending (Wave B / CCGM).
#
# Layering: no dependency on ai_hydro tools or aihydro_watershed — this is a
# standalone geology data package that sits beside the ecosystem, optionally
# wrapped by aihydro-data as a geology product (Wave B4).
# ─────────────────────────────────────────────────────────────────────────────

[project]
name = "pygeoglim"
version = "1.4.0"
description = "GLiM lithology + GLHYMPS hydrogeology attributes for watersheds and regions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mohammad Galib", email = "mgalib@purdue.edu"},
]
keywords = [
    "geology", "hydrology", "watershed", "GLiM", "GLHYMPS",
    "lithology", "permeability", "porosity", "geospatial", "CAMELS",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "platformdirs>=3.0.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
# aihydro-core integration: typed HydroResult returns + ToolError
contracts = [
    "aihydro-core[contracts]>=0.2.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage   = "https://github.com/AI-Hydro/pygeoglim"
Repository = "https://github.com/AI-Hydro/pygeoglim"
Issues     = "https://github.com/AI-Hydro/pygeoglim/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygeoglim*"]

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
markers = [
    "live: tests requiring internet / HuggingFace data. Deselect with -m 'not live'.",
]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
